--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -24,11 +24,9 @@ on:
         description: "Path to .run_env on EC2"
         required: true
         type: string
-      environment:
-        description: "Environment to deploy to"
-        required: true
+      repo_name:
         type: string
-        default: dev
+        required: true
 
     secrets:
       AWS_ACCESS_KEY_ID:
@@ -44,13 +42,12 @@ on:
 
 env:
   AWS_REGION: af-south-1
-  PROJECT_NAME: fast-umsebenzi
+  PROJECT_NAME: fast-umsebenzi-dev
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{inputs.environment}}
-
+    environment: dev
     steps:
       - name: 🧩 Checkout code
         uses: actions/checkout@v4
@@ -69,7 +66,7 @@ jobs:
       - name: 🏗️ Build Docker image
         run: |
           IMAGE_TAG=${{ github.sha }}
-          IMAGE_NAME=${{ env.PROJECT_NAME }}-${{ inputs.app_name }}
+          IMAGE_NAME=${{ inputs.repo_name }}
           FULL_IMAGE="${{ steps.ecr.outputs.registry }}/${IMAGE_NAME}:${IMAGE_TAG}"
 
           echo "🧱 Building image: $FULL_IMAGE"
