--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -15,6 +15,10 @@ on:
         description: "Container port to expose"
         required: true
         type: string
+      app_external_port:
+        type: string
+        description: "External port to expose"
+        required: true
       network_name:
         description: "Docker network name on EC2"
         required: false
@@ -109,6 +113,7 @@ jobs:
             NETWORK_NAME=${{ inputs.network_name }} \
             IMAGE="${{ inputs.repo_name }}/${{ inputs.image_name }}:${{ github.sha }}" \
             DOCKER_PORT=${{ inputs.docker_port }} \
+            APP_EXTERNAL_PORT=${{ inputs.app_external_port }} \
             ENV_FILE=${{ inputs.env_file_path }} \
             AWS_REGION=${{ env.AWS_REGION }} \
             REPO_NAME=${{ inputs.repo_name }} \
@@ -151,7 +156,7 @@ jobs:
               --network "$NETWORK_NAME" \
               --env-file "$ENV_FILE" \
               -v shared_volume:/shared \
-              -p "$DOCKER_PORT:$DOCKER_PORT" \
+              -p "APP_EXTERNAL_PORT:$DOCKER_PORT" \
               "$IMAGE"
           
             echo "🧹 Cleaning up old images..."
